[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/other/white-64x64.png" type="Texture" id=1]
[ext_resource path="res://props/natural_env/herb_tree_env_map.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[node name="herb_tree_env_map" type="YSort"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.733333, 0.192157, 0.368627, 0.145098 )
scale = Vector2( 312.5, 312.5 )
texture = ExtResource( 1 )

[node name="herb_tree_marker" type="Node2D" parent="."]
material = SubResource( 1 )
use_parent_material = true
z_index = 20

[node name="mint_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="rosemary_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="parsley_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="thyme_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="winter_savory_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="basil_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="sage_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="chives_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="oregano_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="catnip_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="sorrel_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="caraway_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="tarragon_tree_timer" type="Timer" parent="."]
one_shot = true

[node name="horseradish_timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="mint_tree_timer" to="." method="_on_mint_tree_timer_timeout"]
[connection signal="timeout" from="rosemary_tree_timer" to="." method="_on_rosemary_tree_timer_timeout"]
[connection signal="timeout" from="parsley_tree_timer" to="." method="_on_parsley_tree_timer_timeout"]
[connection signal="timeout" from="thyme_tree_timer" to="." method="_on_thyme_tree_timer_timeout"]
[connection signal="timeout" from="winter_savory_tree_timer" to="." method="_on_winter_savory_tree_timer_timeout"]
[connection signal="timeout" from="basil_tree_timer" to="." method="_on_basil_tree_timer_timeout"]
[connection signal="timeout" from="sage_tree_timer" to="." method="_on_sage_tree_timer_timeout"]
[connection signal="timeout" from="chives_tree_timer" to="." method="_on_chives_tree_timer_timeout"]
[connection signal="timeout" from="oregano_tree_timer" to="." method="_on_oregano_tree_timer_timeout"]
[connection signal="timeout" from="catnip_tree_timer" to="." method="_on_catnip_tree_timer_timeout"]
[connection signal="timeout" from="sorrel_tree_timer" to="." method="_on_sorrel_tree_timer_timeout"]
[connection signal="timeout" from="caraway_tree_timer" to="." method="_on_caraway_tree_timer_timeout"]
[connection signal="timeout" from="tarragon_tree_timer" to="." method="_on_tarragon_tree_timer_timeout"]
[connection signal="timeout" from="horseradish_timer" to="." method="_on_horseradish_timer_timeout"]
